--- a/parts/adaproject/adaproject_optionsdlgbase.ui
+++ b/parts/adaproject/adaproject_optionsdlgbase.ui
@@ -172,7 +172,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Compiler &amp;Options:</string>
+                <string>Compiler &amp;options:</string>
             </property>
             <property name="buddy" stdset="0">
                 <cstring>compiler_box</cstring>
@@ -191,7 +191,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Ada &amp;Compiler:</string>
+                <string>Ada &amp;compiler:</string>
             </property>
             <property name="buddy" stdset="0">
                 <cstring>compiler_box</cstring>
@@ -225,7 +225,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Compiler Co&amp;mmand:</string>
+                <string>Compiler co&amp;mmand:</string>
             </property>
             <property name="buddy" stdset="0">
                 <cstring>compiler_box</cstring>
@@ -306,7 +306,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Main &amp;Source File:</string>
+                <string>Main &amp;source file:</string>
             </property>
             <property name="buddy" stdset="0">
                 <cstring>compiler_box</cstring>
@@ -465,6 +465,7 @@
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
+    <includehint>qwidget.h</includehint>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
     <includehint>kpushbutton.h</includehint>
