--- a/parts/closer/closer_dialog.ui
+++ b/parts/closer/closer_dialog.ui
@@ -24,7 +24,7 @@
                 <cstring>groupBox1</cstring>
             </property>
             <property name="title">
-                <string>Checked files will be closed</string>
+                <string>Checked Files Will be Closed</string>
             </property>
             <vbox>
                 <property name="name">
@@ -81,7 +81,7 @@
                         <cstring>ok_button</cstring>
                     </property>
                     <property name="text">
-                        <string>OK</string>
+                        <string>&amp;OK</string>
                     </property>
                     <property name="toolTip" stdset="0">
                         <string></string>
@@ -92,7 +92,7 @@
                         <cstring>cancel_button</cstring>
                     </property>
                     <property name="text">
-                        <string>Cancel</string>
+                        <string>&amp;Cancel</string>
                     </property>
                 </widget>
             </hbox>
