--- a/parts/cppsupport/subclassingdlgbase.ui
+++ b/parts/cppsupport/subclassingdlgbase.ui
@@ -131,7 +131,7 @@
                 <cstring>m_btnOk</cstring>
             </property>
             <property name="text">
-                <string>Create</string>
+                <string>C&amp;reate</string>
             </property>
         </widget>
         <widget class="QPushButton" row="1" column="2">
@@ -139,7 +139,7 @@
                 <cstring>m_btnCancel</cstring>
             </property>
             <property name="text">
-                <string>Cancel</string>
+                <string>&amp;Cancel</string>
             </property>
         </widget>
         <spacer row="1" column="0">
