--- a/parts/replace/replacedlg.ui
+++ b/parts/replace/replacedlg.ui
@@ -49,7 +49,7 @@
                         <cstring>textLabel1</cstring>
                     </property>
                     <property name="text">
-                        <string>Find</string>
+                        <string>Find:</string>
                     </property>
                 </widget>
                 <widget class="KHistoryCombo">
@@ -65,7 +65,7 @@
                         <cstring>textLabel2</cstring>
                     </property>
                     <property name="text">
-                        <string>Replacement</string>
+                        <string>Replacement:</string>
                     </property>
                 </widget>
                 <widget class="KHistoryCombo">
@@ -191,7 +191,7 @@
                 <cstring>buttonGroup1</cstring>
             </property>
             <property name="title">
-                <string>Target files in project</string>
+                <string>Target Files in Project</string>
             </property>
             <vbox>
                 <property name="name">
@@ -286,7 +286,7 @@
                         <cstring>find_button</cstring>
                     </property>
                     <property name="text">
-                        <string>Find</string>
+                        <string>&amp;Find</string>
                     </property>
                     <property name="default">
                         <bool>true</bool>
@@ -300,7 +300,7 @@
                         <cstring>cancel_button</cstring>
                     </property>
                     <property name="text">
-                        <string>Cancel</string>
+                        <string>&amp;Cancel</string>
                     </property>
                 </widget>
             </hbox>
