--- a/parts/trollproject/projectconfigurationdlgbase.ui
+++ b/parts/trollproject/projectconfigurationdlgbase.ui
@@ -270,7 +270,7 @@
                             <bool>false</bool>
                         </property>
                         <property name="title">
-                            <string>Library options</string>
+                            <string>Library Options</string>
                         </property>
                         <property name="exclusive">
                             <bool>true</bool>
@@ -284,7 +284,7 @@
                                     <cstring>staticRadio</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>static Library</string>
+                                    <string>Static Library</string>
                                 </property>
                             </widget>
                             <widget class="QRadioButton" row="2" column="0" rowspan="1" colspan="2">
@@ -292,7 +292,7 @@
                                     <cstring>pluginRadio</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>plugin</string>
+                                    <string>Plugin</string>
                                 </property>
                             </widget>
                             <widget class="QLabel" row="3" column="0">
@@ -300,7 +300,7 @@
                                     <cstring>textLabel1</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>library version</string>
+                                    <string>Library version:</string>
                                 </property>
                             </widget>
                             <widget class="QLineEdit" row="3" column="1">
@@ -313,7 +313,7 @@
                                     <cstring>sharedRadio</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>shared Library</string>
+                                    <string>Shared Library</string>
                                 </property>
                             </widget>
                         </grid>
@@ -1013,7 +1013,7 @@
                             </font>
                         </property>
                         <property name="text">
-                            <string>Lib Directories outside project:</string>
+                            <string>Lib directories outside project:</string>
                         </property>
                         <property name="buddy" stdset="0">
                             <cstring>outsideinc_listview</cstring>
@@ -1345,7 +1345,7 @@
                             <cstring>mocdir_label</cstring>
                         </property>
                         <property name="text">
-                            <string>MOC Files:</string>
+                            <string>MOC files:</string>
                         </property>
                     </widget>
                     <widget class="QLabel" row="1" column="0">
@@ -1353,7 +1353,7 @@
                             <cstring>uidir_label</cstring>
                         </property>
                         <property name="text">
-                            <string>UI Files:</string>
+                            <string>UI files:</string>
                         </property>
                     </widget>
                     <widget class="KURLRequester" row="0" column="1">
@@ -1371,7 +1371,7 @@
                             <cstring>objdir_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Object Files:</string>
+                            <string>Object files:</string>
                         </property>
                     </widget>
                     <widget class="KURLRequester" row="2" column="1">
@@ -1431,7 +1431,7 @@
                                     <cstring>TextLabel1_2_2</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>IDL Compiler</string>
+                                    <string>IDL compiler:</string>
                                 </property>
                             </widget>
                             <widget class="QLabel" row="1" column="0">
@@ -1439,7 +1439,7 @@
                                     <cstring>TextLabel2_3</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Compiler Options</string>
+                                    <string>Compiler options:</string>
                                 </property>
                             </widget>
                             <widget class="KLineEdit" row="0" column="1">
