- Added methods to KDevApi,KDevPlugin to handle version controls; - Modified KDevVersionControl and AppWizardDlg to comply these modifications; - Modified CvsPart and LogForm to use KActions for building context menu; - Bugfixed CvsPart methods (now is possible to start cvs operations for projectDir too)

--- a/parts/cvs/logform.ui
+++ b/parts/cvs/logform.ui
@@ -40,7 +40,6 @@
 </includes>
 <forwards>
     <forward>class QProcess;</forward>
-    <forward>class KURL;</forward>
 </forwards>
 <variables>
     <variable>QString pathName;</variable>
@@ -49,7 +48,7 @@
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
-    <slot>start( const QString &amp; workDir, const KURL &amp; fn )</slot>
+    <slot>start( const QString &amp; workDir, const QString &amp; fn )</slot>
     <slot>slotProcessExited()</slot>
     <slot>slotReadStdout()</slot>
     <slot>slotReadStderr()</slot>
